--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,6 +2,7 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.sqljdbc4.jar=/home/tiny/Assignment/PRJ311x_0101_FX_VN_Java_Swing/PRJ311x_0101_FX_VN_Assignment_4_datncfx00499/PRJ311x-Project4/jdbc/sqljdbc4.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
